--- a/index.html
+++ b/index.html
@@ -167,24 +167,91 @@
                         <div>
                             <h3>Blog</h3>
                             <h2>Adidas skate copa collection</h2>
-                            <p>Bit of opitonal text about the slide that really doesn't matter. But optional information is also available in the train station in Kaspichan, and airport in Krumovgrad also.</p>
+                            <p>Bit of opitonal text about the slide that really doesn't matter. But optional information is also available in the train station in Kaspichan ...</p>
                             <button class="read-more">Read more</button>
                         </div>
                     </div>
                 </div>
             </li>
-            <li>
+            <li class="second-slide">
                 <img src="img/slider-img2.jpg" />
-                <div class="slider-content">
-                    <button class="youtube-play"></button>
-                    <p>Bit of opitonal text about the slide that really doesn't matter. But optional information is also available in the train station in Kaspichan, and airport in Krumovgrad also.</p>
+
+                <div class="slider-content-wrap">
+                    <div class="slider-content">
+                        <button class="youtube-play"></button>
+                        <p>Bit of opitonal text about the slide that really doesn't matter. But optional information is available in the train to Kaspichan, and airport in ...</p>
+                    </div>
+                    <div class="youtube-video">
+                        <iframe width="1280" height="720" src="http://www.youtube.com/embed/N5HbRlAUqRA" frameborder="0" allowfullscreen></iframe>
+                    </div>
                 </div>
             </li>
         </ul>
     </section>
 
     <main>
-
+        <section class="featured-posts">
+            <article>
+                <img src="img/img1.jpg" width="386" height="250"/>
+                <label>Feature</label>
+                <h2>Selected outfit grid</h2>
+                <p>Weekly selected outfit grid vi the Flatspot instagram. Shop the items in this collection here. <a href="#" class="read-more">Read More</a></p>
+            </article>
+            <article>
+                <img src="img/img2.jpg" width="386" height="250" />
+                <label>Feature</label>
+                <h2>Raised by wolves lorem ipsum bla bla bla</h2>
+                <p>A video and selected photos from the Less Fall / Winter collection look book. This season features a wide selection of ... <a href="#" class="read-more">Read More</a></p>
+            </article>
+            <article>
+                <img src="img/img3.jpg" width="386" height="250" />
+                <label>Feature</label>
+                <h2>Raised by wolves lorem ipsum bla bla bla</h2>
+                <p>A video and selected photos from the Less Fall / Winter collection look book. This season features a wide selection of ... <a href="#" class="read-more">Read More</a></p>
+            </article>
+        </section>
+        <section class="products">
+            <article>
+                <img src="img/img1-promo.jpg" width="224" height="224" />
+                <div>
+                    <div class="brand">Huf</div>
+                    <div class="price">&pound;37.50</div>
+                </div>
+                <p>Wu-Tang Plantlife Socks</p>
+            </article>
+            <article>
+                <img src="img/img2-promo.jpg" width="224" height="224" />
+                <div>
+                    <div class="brand">Huf</div>
+                    <div class="price">&pound;37.50</div>
+                </div>
+                <p>Wu-Tang Plantlife Socks</p>
+            </article>
+            <article>
+                <img src="img/img3-promo.jpg" width="224" height="224" />
+                <div>
+                    <div class="brand">Huf</div>
+                    <div class="price">&pound;37.50</div>
+                </div>
+                <p>Wu-Tang Plantlife Socks</p>
+            </article>
+            <article>
+                <img src="img/img4-promo.jpg" width="224" height="224" />
+                <div>
+                    <div class="brand">Huf</div>
+                    <div class="price">&pound;37.50</div>
+                </div>
+                <p>Wu-Tang Plantlife Socks</p>
+            </article>
+            <article>
+                <img src="img/img5-promo.jpg" width="224" height="224" />
+                <div>
+                    <div class="brand">Huf</div>
+                    <div class="price">&pound;37.50</div>
+                </div>
+                <p>Wu-Tang Plantlife Socks</p>
+            </article>
+        </section>
     </main>
 
     <footer id="main-footer">
@@ -229,12 +296,12 @@
                 <li>Site Designed by <a href="#">Atwork</a></li>
             </ul>     
         </div>
-        <div id="footer-promotion">
-            <div>Free shipping to USA edns tomorrow</div>
-            <div>Use code freestuff for 10% off</div> 
-            <div>Join our mailing list for 15% off</div>
-            <div class="close-footer-promotion">Close</div>
-        </div>
     </footer>
+    <div id="footer-promotion">
+        <div>Free shipping to USA edns tomorrow</div>
+        <div>Use code freestuff for 10% off</div>
+        <div>Join our mailing list for 15% off</div>
+        <div class="close-footer-promotion">Close</div>
+    </div>
 </body>
 </html>
